# sdpa-gpu-test

./: .pre-commit-config.yaml  README.md  pyproject.toml  runner.sh
configs/: a100.json  h100.json  h200.json  l40.json  v100.json
outputs/: h100pcie.md  h200sxm.md  v100sxm.md
src/: main.py  report.py  sdpa_test.py
