[project]
name = "gpu-attention-test"
version = "0.1.0"
description = "gpu attention test"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chuchichaestli>=0.2.4",
    "pandas>=2.2.3",
    "submitit>=1.5.2",
    "tabulate>=0.9.0",
    "torch==2.5.1",
]

[tool.ruff]
line-length = 88
